syntax = "proto3";

package pb;

option go_package = "/pb"; // Go import path

service UserService {
    rpc GetUser (DataRequest) returns (DataResponse);
}

message DataRequest {
    string id = 1;
}

message DataResponse {
    string id = 1;
    string name = 2;
    optional int32 age = 3;
    optional string email = 4;
}